--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,7 @@
     "reactjs-popup": "^1.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
