--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dist"
   ],
   "scripts": {
-    "dev": "nodemon server.js --ignore client"
+  "client": "cd client && npm start",
+ "server": "nodemon server.js --ignore client",
+ "start": "concurrently - kill-others \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
